spdlog (1:1.3.0-1) UNRELEASED; urgency=medium

  * debian/control: Mark us as Multi-Arch: same.
  * New upstream version

 -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sat, 12 Jan 2019 05:33:37 -0800

spdlog (1:1.2.1-1) unstable; urgency=medium

  * New upstream version

 -- Michael R. Crusoe <michael.crusoe@gmail.com>  Wed, 28 Nov 2018 23:54:29 -0800

spdlog (1:1.2.0-1) unstable; urgency=medium

  * New upstream release.

 -- Michael R. Crusoe <michael.crusoe@gmail.com>  Wed, 17 Oct 2018 03:10:17 -0700

spdlog (1:1.1.0-2) unstable; urgency=medium

  * Team upload.
  * Drop debian/gdb.conf (specifying only defaults)
  * Fix build on several architectures (Thanks for the patch to
    Adrian Bunk <bunk@debian.org>)
    Closes: #909938

 -- Andreas Tille <tille@debian.org>  Mon, 01 Oct 2018 08:31:40 +0200

spdlog (1:1.1.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream version
    Closes: #909197
  * Standards-Version: 4.2.1
  * Respect DEB_BUILD_OPTIONS in override_dh_auto_test

 -- Andreas Tille <tille@debian.org>  Wed, 19 Sep 2018 21:38:22 +0200

spdlog (1:0.17.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream version
  * debhelper 11
  * Point Vcs fields to salsa.debian.org
  * Standards-Version: 4.1.4

 -- Andreas Tille <tille@debian.org>  Mon, 28 May 2018 21:20:54 +0200

spdlog (1:0.16.3-1) unstable; urgency=medium

  * New upstream version

 -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sat, 17 Feb 2018 09:02:28 -0800

spdlog (1:0.14.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream version
    Closes: #882606
  * debhelper 10

 -- Andreas Tille <tille@debian.org>  Sat, 02 Dec 2017 08:06:47 +0100

spdlog (1:0.11.0-3) unstable; urgency=medium

  * Allow stderr, fixes autopkgtests; fix courtesy Graham Inggs
    <ginggs@debian.org>. (Closes: #854469)
  * Update standards-version to 4.1.1; no changes needed.

 -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sat, 14 Oct 2017 10:30:35 -0700
