@@ -4,8 +4,9 @@ Uploaders: Michael R. Crusoe <michael.crusoe@gmail.com>
 Section: libdevel
 Priority: optional
 Build-Depends: debhelper (>= 11~),
-               cmake
-Standards-Version: 4.2.1
+               cmake,
+	       libbenchmark-dev
+Standards-Version: 4.3.0
 Vcs-Browser: https://salsa.debian.org/med-team/spdlog
 Vcs-Git: https://salsa.debian.org/med-team/spdlog.git
 Homepage: https://github.com/gabime/spdlog
