@@ -1,2 +1,1 @@
 tests
-example
