@@ -2,6 +2,8 @@ spdlog (1:1.3.0-1) UNRELEASED; urgency=medium
 
   * debian/control: Mark us as Multi-Arch: same.
   * New upstream version
+  * Build the benchmark.
+  * Standards-Version: 4.3.0, no changes needed
 
  -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sat, 12 Jan 2019 05:33:37 -0800
 
